removed unused links

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,11 +11,11 @@
                 </h3>
                 
             </div>
-            <div>
+            <!-- <div>
                     <div>My Recipes</div>
                     <div>My Favourite Recipes</div>
                     
-                </div>
+                </div> -->
         </div>
     </div>
     
