--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -23,7 +23,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate"  minlength="5" maxlength="20" required>
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate"  minlength="5" maxlength="100" required>
                     <label for="recipe_name">Recipe Name</label>
                 </div>
             </div>
@@ -46,23 +46,23 @@
                         class="materialize-textarea" required></textarea>
                         <label for="recipe_ingredients">Cooking Ingredients</label>
                     </div>
-                    <div class="buttons" id="btn-ingredient">
+                    <!-- <div class="buttons" id="btn-ingredient">
                          <button id="add_ingredient" type="button" class="btn-small light-blue darken-1 text-shadow">
                         Add Ingredient <i class="fas fa-plus-square right"></i>
                     </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <textarea id="recipe_description" name="recipe_description" minlength="5" maxlength="1000"
+                    <textarea id="recipe_description" name="recipe_description" minlength="5" maxlength="2000"
                     class="materialize-textarea" required></textarea>
                     <label for="recipe_description">Cooking Method</label>
-                    <div class="buttons">
+                    <!-- <div class="buttons">
                         <button type="button" class="btn-small light-blue darken-1 text-shadow">
                         Add Step <i class="fas fa-plus-square right"></i>
                     </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="row">
