--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -55,11 +55,11 @@
                             <label for="recipe_ingredients">Cooking Ingredients</label>
                         </div>
                        
-                        <div class="buttons" id="btn-ingredient">
+                        <!-- <div class="buttons" id="btn-ingredient">
                             <button id="add_ingredient" type="button" class="btn-small light-blue darken-1 text-shadow">
                             Add Ingredient <i class="fas fa-plus-square right"></i>
                         </button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="row">
@@ -70,11 +70,11 @@
                         </textarea>
                         <label for="recipe_description">Cooking Method</label>
                     </div>
-                    <div class="buttons">
+                    <!-- <div class="buttons">
                         <button type="button" class="btn-small light-blue darken-1 text-shadow">
                         Add Step <i class="fas fa-plus-square right"></i>
                     </button>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
