--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1 class="center-align">{{recipes.recipe_name }}</h1>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col s12">
             <div class="recipe-image">
@@ -33,11 +33,11 @@
             <div id="controls">
                 <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
                 <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Delete</a>
-                <div>
+                <!-- <div>
                     <a href="">
                     <img src="/static/images/favourite.png" alt="favourite" >
                     </a>
-                </div>
+                </div> -->
             </div>
             
         </div>
