--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="col s12 m7 offset-m2 method">
-            
+            {% if session.user %}
             <div id="controls">
                 <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
                 <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Delete</a>
@@ -39,7 +39,7 @@
                     </a>
                 </div> -->
             </div>
-            
+            {% endif %}
         </div>
     
     </div>
