--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -7,7 +7,8 @@
         <div class="col s12">
             <div class="recipe-image">
                 {% if recipes.recipe_img_URL  %}
-                    <img src="{{ recipes.recipe_img_URL }}">
+                    <!-- <img src="{{ recipes.recipe_img_URL }}"> -->
+                    <img src="{{recipes.recipe_img_URL}}" onerror="this.src='../static/images/bgimg.jpg';">
                 {% else %}
                     <img src="../static/images/bgimg.jpg">
                 {% endif %}
