--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,12 +7,12 @@
                 <img src="../static/images/bgimg.jpg" alt="food image">
                 <div class="row">
                     <div class="col s12">
-                        <form action="{{ url_for('search') }}" method="post" class="search-box">
+                        <form action="{{ url_for('recipes') }}" method="get" class="search-box">
                             <div class=" center-align">
                                 <div class="field-wrapper">
                                     <div class="input-field ">
                                         <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                                        <input type="text" name="query" id="query" style="color: #C0C0C0;" minlength="3" class="validate " required>
+                                        <input type="text" name="query" value="{{ query if query else ''}}" id="query" style="color: #C0C0C0;" minlength="3" class="validate " required>
                                         <label for="query">Search Recipes</label>
                                     </div>
                                 
@@ -38,19 +38,19 @@
     <hr class="hr-recipes">
     <div class="food-wrapper center-align">
         <div>
-            <a href="{{ url_for('search_category', category_name='breakfast') }}" >
+            <a href="{{ url_for('recipes', category='breakfast') }}" >
                 <img src="/static/images/breakfast.png">
                 <div class="breakfast">Breakfast</div>
             </a>
         </div>
         <div>
-            <a href="{{ url_for('search_category', category_name='lunch') }}">
+            <a href="{{ url_for('recipes', category='lunch') }}">
                 <img src="/static/images/lunch.png" alt="lunch" >
                 <div class="lunch">Lunch</div>
             </a>
         </div>
         <div>
-            <a href="{{ url_for('search_category', category_name='dinner') }}">
+            <a href="{{ url_for('recipes', category='dinner') }}">
                 <img src="/static/images/dinner.png" alt="dinner" >
                 <div class="dinner">Dinner</div>
             </a>
@@ -64,7 +64,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             {% if recipe.recipe_img_URL  %}
-                            <img src="{{ recipe.recipe_img_URL }}">
+                            <img src="{{recipe.recipe_img_URL}}" onerror="this.src='../static/images/bgimg.jpg';">
                             {% else %}
                             <img src="../static/images/bgimg.jpg">
                             {% endif %}
