--- a/templates/base.html
+++ b/templates/base.html
@@ -19,24 +19,26 @@
     <header>
 
         <!-- top navbar -->
-        <nav class="nav-extended grey darken-4">
-            <div class="nav-wrapper">
-                <a href="{{url_for('recipes')}}" class="brand-logo left"><img src="/static/images/myRecipeLogo.png"
-                        alt="logo name"></a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="{{url_for('recipes')}}">Recipes</a></li>
-                    {% if session.user %}
-                    <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{url_for('add_recipe')}}">New Recipe</a></li>
-                    <li><a href="{{url_for('logout')}}">Log Out</a></li>
-                    {% else %}
-                    <li><a href="{{url_for('login')}}">Log In</a></li>
-                    <li><a href="{{url_for('register')}}">Register</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav class="nav-extended grey darken-4">
+                <div class="nav-wrapper">
+                    <a href="{{url_for('recipes')}}" class="brand-logo left"><img src="/static/images/myRecipeLogo.png"
+                            alt="logo name"></a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="{{url_for('recipes')}}">Recipes</a></li>
+                        {% if session.user %}
+                        <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{url_for('add_recipe')}}">New Recipe</a></li>
+                        <li><a href="{{url_for('logout')}}">Log Out</a></li>
+                        {% else %}
+                        <li><a href="{{url_for('login')}}">Log In</a></li>
+                        <li><a href="{{url_for('register')}}">Register</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </div>
         <!-- mobile side navbar -->
         <ul class="sidenav grey darken-4 " id="mobile-demo">
             <li><a href="{{url_for('recipes')}}">Recipes</a></li>
