--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -32,12 +32,7 @@
             {% if session.user %}
             <div id="controls">
                 <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Delete</a>
-                <!-- <div>
-                    <a href="">
-                    <img src="/static/images/favourite.png" alt="favourite" >
-                    </a>
-                </div> -->
+                <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small delete-btn" data-confirm="Are you sure to delete this item?">Delete</a>
             </div>
             {% endif %}
         </div>
