--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,18 +163,11 @@ nav a img {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin: 0 auto;
+    
 }
 
-/* .user-info {
-    float: right;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 0.5px;
-} */
 
-.control-btn {
-    margin: 5px;
-}
 
 .page-footer{
     display: flex;
@@ -204,9 +197,10 @@ nav a img {
 
 
 .recipe-image img{
-    background-size: 100%;
-    height: 400px;
+   width: 100%;
+    height: 100%;
 }
+
 
 .ingredients-content {
     margin-top: 35px;
@@ -227,4 +221,29 @@ nav a img {
 .buttons {
     float: right;
     padding: 10px;
+}
+
+.modal-delete {
+    display: none;
+}
+
+.modal-delete.show{
+    display: flex;
+    background-color: white;
+    width: 350px;
+    height: 120px;
+    flex-direction: column;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+     box-shadow: -2px -2px 10px rgba(255, 255, 255, 0.5),
+    5px 5px 10px rgba(48, 47, 47, 0.5);
+    right:350px;
+    position: absolute;
+    top:400px;
+}
+.modal-buttons{
+    display: flex;
+    justify-content: space-between;
+    
 }
