--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -4,22 +4,21 @@
 <h1 class="center-align">{{recipes.recipe_name }}</h1>
 <div class="container-fluid">
     <div class="row">
-        <div class="col s12">
+        <div class="col s12 m3">
             <div class="recipe-image center-align">
                 {% if recipes.recipe_img_URL  %}
-                    <img src="{{recipes.recipe_img_URL}}" onerror="this.src='../static/images/bgimg.jpg';">
+                <img src="{{recipes.recipe_img_URL}}" onerror="this.src='../static/images/bgimg.jpg';">
                 {% else %}
-                    <img src="../static/images/bgimg.jpg">
+                <img src="../static/images/bgimg.jpg">
                 {% endif %}
             </div>
 
         </div>
-    </div>
-    <div class="row">
-    
-        <div class="col s12 m3 ingredients-info">
+
+
+        <div class="col s12 m7 offset-m2 ingredients-info">
             <div class="info">
-                
+
                 <h4>Info</h4>
                 <p>{{ recipes.recipe_time }}</p>
                 <p>{{ recipes.recipe_serving }}</p>
@@ -27,17 +26,34 @@
                     <p class="user-added-info">Added by: {{ recipes.created_by }}</p>
                 </div>
             </div>
-        </div>
-        <div class="col s12 m7 offset-m2 method">
-            {% if session.user %}
-            <div id="controls">
-                <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small delete-btn" data-confirm="Are you sure to delete this item?">Delete</a>
+        
+            <div class=" method">
+                {% if session.user %}
+                <div id="controls">
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
+
+                    <button type="button" class="btn-small red accent-4" id="modal-btn">Delete</button>
+                </div>
+                {% endif %}
             </div>
-            {% endif %}
         </div>
-    
     </div>
+    <!-- Modal -->
+    <div class="modal-delete">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Please confirm you want to delete recipe!</p>
+            </div>
+            <div class="modal-buttons">
+                <button type="button" class="btn-small grey" id="modal-close">Close</button>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}">
+                    <button type="button" class="btn-small red accent-4">Delete</button>
+                </a>
+            </div>
+        </div>
+
+    </div>
+
     <div class="row">
         <div class="col s12 m3 ingredients">
             <div>
