--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,7 +240,9 @@ nav a img {
     5px 5px 10px rgba(48, 47, 47, 0.5);
     right:350px;
     position: absolute;
-    top:400px;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .modal-buttons{
     display: flex;
