--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="section">
     <h3 class="center-align">Register</h3>
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{url_for('register')}}">
@@ -8,7 +9,8 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix"></i>
-                        <input id="username" name="username" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <input id="username" name="username" type="text" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
                     </div>
                 </div>
@@ -16,13 +18,15 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-user-lock prefix"></i>
-                        <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                        <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                            pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
                 <!-- button -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large green accent-4">Register<i class="fas fa-sign-in-alt"></i></button>
+                    <button type="submit" class="col s12 btn-large green accent-4">Register<i
+                            class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
         </form>
@@ -30,11 +34,11 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-               Already Registered:
-            
-            <a href="{{url_for('login')}}" class="light-blue-text">Log In</a>
+                Already Registered:
+
+                <a href="{{url_for('login')}}" class="light-blue-text">Log In</a>
             </p>
         </div>
     </div>
-            
-{% endblock %}   
+</div>
+{% endblock %}
