--- a/static/css/style.css
+++ b/static/css/style.css
@@ -258,7 +258,10 @@ nav a img {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    
+    background-color: white;
+    padding:20px;
+    box-shadow: -2px -2px 10px rgba(255, 255, 255, 0.5),
+    5px 5px 10px rgba(48, 47, 47, 0.5);
 }
 
 .profile {
@@ -269,11 +272,10 @@ nav a img {
 .profile-info{
     display: flex;
     flex-direction: column;
-    margin: 30px;
+    margin-left: 30px;
 }
 .profile img{
     border-radius: 50%;
-    margin-top: 20px;
 }
 .profile-name {
     font-size: 2rem;
