--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="card-profile ">
             <div class="profile card-image">
-                <img src="/static/images/bgimg (1).jpg">
+                <img src="/static/images/profile-img.jpg">
                 <div class="profile-info">
                     <span class=" profile-name card-title light-blue-text text-darken-4">{{username}}'s Profile</span>
                     <p>Age:<span>45</span> years old</p>
