--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -45,7 +45,7 @@
                 <p>Please confirm you want to delete recipe!</p>
             </div>
             <div class="modal-buttons">
-                <button type="button" class="btn-small grey" id="modal-close">Close</button>
+                <button type="button" class="btn-small grey" id="modal-close">Cancel</button>
                 <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}">
                     <button type="button" class="btn-small red accent-4">Delete</button>
                 </a>
