--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="section">
+    <!-- log in form -->
     <h3 class="center-align">Log In</h3>
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{url_for('login')}}">
