--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 
 
 <div class="section">
+    <!-- profile form -->
     <div class="row">
         <div class="card-profile ">
             <div class="profile card-image">
