--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h3 class="center-align">Add Recipe</h3>
-
+<!-- add recipe form -->
     <div class="row card-panel grey lighten-5" >
         <form class="col s12" method="POST" action="{{url_for('add_recipe')}}">
             <div class="row">
@@ -46,11 +46,6 @@
                         class="materialize-textarea" required></textarea>
                         <label for="recipe_ingredients">Cooking Ingredients</label>
                     </div>
-                    <!-- <div class="buttons" id="btn-ingredient">
-                         <button id="add_ingredient" type="button" class="btn-small light-blue darken-1 text-shadow">
-                        Add Ingredient <i class="fas fa-plus-square right"></i>
-                    </button>
-                    </div> -->
                 </div>
             </div>
             <div class="row">
@@ -58,11 +53,6 @@
                     <textarea id="recipe_description" name="recipe_description" minlength="5" maxlength="2000"
                     class="materialize-textarea" required></textarea>
                     <label for="recipe_description">Cooking Method</label>
-                    <!-- <div class="buttons">
-                        <button type="button" class="btn-small light-blue darken-1 text-shadow">
-                        Add Step <i class="fas fa-plus-square right"></i>
-                    </button>
-                    </div> -->
                 </div>
             </div>
             <div class="row">
