--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,7 @@
 
         {% endblock %}
     </div>
+<!-- footer container -->
     <div class="container-fluid">
         <div class="row">
             <footer class="page-footer grey darken-4">
