--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <h3 class="center-align">Edit Recipe</h3>
-
+<!-- renders form to edit recipe -->
         <div class="row card-panel grey lighten-5" >
             <form class="col s12" method="POST" action="{{url_for('edit_recipe', recipe_id = recipe._id)}}">
                 <div class="row">
@@ -54,12 +54,6 @@
                             </textarea>
                             <label for="recipe_ingredients">Cooking Ingredients</label>
                         </div>
-                       
-                        <!-- <div class="buttons" id="btn-ingredient">
-                            <button id="add_ingredient" type="button" class="btn-small light-blue darken-1 text-shadow">
-                            Add Ingredient <i class="fas fa-plus-square right"></i>
-                        </button>
-                        </div> -->
                     </div>
                 </div>
                 <div class="row">
@@ -70,11 +64,6 @@
                         </textarea>
                         <label for="recipe_description">Cooking Method</label>
                     </div>
-                    <!-- <div class="buttons">
-                        <button type="button" class="btn-small light-blue darken-1 text-shadow">
-                        Add Step <i class="fas fa-plus-square right"></i>
-                    </button>
-                    </div> -->
                 </div>
                 <div class="row">
                     <div class="col s12 center-align">
