--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block image %}
 <div class="row">
+<!-- hero image -->
     <div class="con s12">
         <div class="image">
             <div class="bg-img">
@@ -14,6 +15,7 @@
 {% block content %}
 <div class="recipe-wrapper">
     <h1 class="center-align slogan ">Recipes</h1>
+<!-- sort function by category -->
     <hr class="hr-recipes">
     <div class="food-wrapper center-align">
         <div>
@@ -36,6 +38,7 @@
         </div>
     </div>
     <hr class="hr-recipes">
+<!-- search recipe form -->
     <div class="row">
         <div class="col s12 m8 offset-m2">
             <form action="{{ url_for('recipes') }}" method="get" class="search-box">
@@ -61,6 +64,7 @@
         </div>
     </div>
 </div>
+<!-- all recipe area sorted in decending order -->
 <div class="row">
     {% for recipe in recipes %}
     <div class="col s12 m4">
