--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,7 +167,7 @@ nav a img {
 .page-footer{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 .footer-text {
     margin-left: 20px;
@@ -183,11 +183,12 @@ nav a img {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    float: right;
+    
 }
 
 .social-icons a img{
     width: 40px;
+    margin-right:30px;
 }
 
 
@@ -245,10 +246,6 @@ nav a img {
     
 }
 
-.section{
-    position: relative;
-    height: 76vh;
-}
 
 .card-profile{
     
