--- a/templates/base.html
+++ b/templates/base.html
@@ -78,25 +78,27 @@
 
         {% endblock %}
     </div>
-<!-- footer container -->
+    <!-- footer container -->
     <div class="container-fluid">
         <div class="row">
-            <footer class="page-footer grey darken-4">
-                <div class="col s12 social-icons ">
+            <div class="col s12">
+                <footer class="page-footer grey darken-4">
                     <div class="footer-text">
                         <h5 class="white-text">My Recipes</h5>
                         <p class="grey-text text-lighten-4">The way YOU cook.</p>
                     </div>
-                    <a href="https://www.facebook.com" target="_blank"><img src="/static/images/facebook.png"
-                            alt="facebook icon"></a>
-                    <a href="https://www.instagram.com" target="_blank"><img src="/static/images/instagram.png"
-                            alt="instagram icon"></a>
-                    <a href="https://twitter.com/?lang=en-gb" target="_blank"><img src="/static/images/twitter.png"
-                            alt="twitter icon"></a>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com" target="_blank"><img src="/static/images/facebook.png"
+                                alt="facebook icon"></a>
+                        <a href="https://www.instagram.com" target="_blank"><img src="/static/images/instagram.png"
+                                alt="instagram icon"></a>
+                        <a href="https://twitter.com/?lang=en-gb" target="_blank"><img src="/static/images/twitter.png"
+                                alt="twitter icon"></a>
+                    </div>
+                </footer>
                 </div>
-            </footer>
+            </div>
         </div>
-    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
