--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -33,7 +33,7 @@
                 <div id="controls">
                     <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
 
-                    <button type="button" class="btn-small red accent-4" id="modal-btn">Delete</button>
+                    <button type="button" class="btn-small red accent-4 delete-btn">Delete</button>
                 </div>
                 {% endif %}
             </div>
